<resources>
    <string name="app_name" translatable="false">TAGPhy2021_REBOURS_ROUDAUT</string>
    <string name="msg_name">Your Name</string>
    <string name="msg_start">Start Test</string>
    <string name="step2">Step 2</string>
    <string name="step2Title">MY HEART</string>
    <string name="RbYes">Yes</string>
    <string name="RbNo">No</string>
    <string name="RbIdk">I don\'t know</string>
    <string name="step2Q1Ask">Do you have a heart condition?</string>
    <string name="step2Q2Ask">Do you have a cholesterol problem?</string>
    <string name="step2Q3Ask">Are you a diabetic?</string>
    <string name="step2Q4Ask">Do you have hypertension?</string>
    <string name="step2Q5Ask">Do you have a first degree parent (father, mother, brother or sister) who had heart problems (heart attack, stroke, sudden death) before the age of 55 for a man or before the age of 65 for a woman?</string>
    <string name="step2Q6Ask">Do you know your body mass index (BMI)?</string>
    <string name="BtnPrevious">Previous</string>
    <string name="BtnNext">Next</string>
    <string name="step3">Step 3</string>
    <string name="step3Title">MY HEART FOLLOW UP</string>
    <string name="step3Q1Ask">Have you ever discussed your cardiovascular risk with your doctor? (Default = No)</string>
    <string name="step3Q2Ask">Have you ever done a cardiac check-up? (Default = No)</string>
    <string name="step3Q3Ask">Have you ever seen a cardiologist? (Default = No)</string>
    <string name="inputName">Name</string>
    <string name="step1">Step 1</string>
    <string name="step1Title">MY PROFILE</string>
    <string name="step1Q1Ask">You are:</string>
    <string name="step1Q1RbMan">A man</string>
    <string name="step1Q1RbWoman">A woman</string>
    <string name="step1Q1RbOther">Other</string>
    <string name="step1Q2Ask">How old are you?</string>
    <string name="step4Title">MY BMI</string>
    <string name="step4">Step 4</string>
    <string name="step4Q1Ask">Do you know your body mass index (BMI)?</string>
    <string name="step4Q2Ask">What is your weight (in kg)?</string>
    <string name="step4Q3">What is your size (in cm)?</string>
    <string name="step4Q4Rep">Your BMI is</string>
    <string name="step4Q2AskBis">What is your BMI?</string>
    <string name="toast">Please complete all fields</string>
    <string name="_1">1</string>
    <string name="ex_56">ex : 56</string>
    <string name="result">RESULT</string>
    <string name="imgstep4">ImgStep4</string>
    <string name="_3">3</string>
    <string name="btnimc">btnImc</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="ex_168">ex : 168</string>
    <string name="ex_19_6">ex : 19,6</string>
    <string name="accimg">accImg</string>
    <string name="_5">5</string>
    <string name="imgstep2">imgStep2</string>
    <string name="imgstep3">imgstep3</string>
    <string name="ex_22">ex : 22</string>
    <string name="imgstep1">imgstep1</string>
    <string name="BMI18.5">Underweight. This could be a sign you\'re not eating enough or you may be ill.</string>
    <string name="BMI25">Normal weight. Keep up the good work!</string>
    <string name="BMI30">Overweight. The best way to lose weight if you\'re overweight is through a combination of diet and exercise.</string>
    <string name="BMI30more">Obesity. The best way to lose weight if you\'re obese is through a combination of diet and exercise, and, in some cases, medicines.</string>
    <string name="Step2TipsNotOk">You answered yes (or I don’t know) to at least one question. Continue to be followed by your doctor and everything will be fine.</string>
    <string name="Step2TipsOk">You answered no to all the questions. Everything is fine, do not hesitate to consult if you feel the need.</string>
    <string name="Step3TipsOk">Perfect! Do not hesitate to ask your doctor regularly if you need to do a cardiac check-up.</string>
    <string name="Step3TipsNotOk">Be careful! Do not hesitate to ask your doctor regularly if you need to do a cardiac check-up.</string>
    <string name="review">REVIEW</string>
    <string name="ReviewStep2Title">Step 2 - MY HEART</string>
    <string name="ReviewStep3Title">Step 3 - MY HEART FOLLOW UP</string>
    <string name="ReviewStep4Title">Step 4 - BODY MASS INDEX</string>
    <string name="ReviewStep2Q1">Heart problem?</string>
    <string name="ReviewStep2Q2">Cholesterol?</string>
    <string name="ReviewStep2Q3">Diabets?</string>
    <string name="ReviewStep2Q4">Hypertension?</string>
    <string name="ReviewStep2Q5">Parent with heart problem?</string>
    <string name="ReviewStep3Q1">Have you ever discussed your cardiovascular risk with your doctor?</string>
    <string name="ReviewStep3Q2">Have you ever done a cardiac check-up?</string>
    <string name="ReviewStep3Q3">Have you ever seen a cardiologist?</string>
    <string name="ReviewBMI">Your BMI:</string>
    <string name="quit">Quit</string>
    <string name="websiteLink">WEBSITE</string>
</resources>