<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8426E"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-14dp">

    <ImageView
        android:id="@+id/step2Img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moncoeur" />

    <TextView
        android:id="@+id/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/step2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/step2Title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step2Title"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toEndOf="@+id/step2Img"
        app:layout_constraintTop_toBottomOf="@+id/step2" />

    <TextView
        android:id="@+id/Q1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="-5dp"
        android:background="#FFFFFF"
        android:text="1"
        android:textAlignment="center"
        android:textColor="#E8426E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/step2Img"
        app:layout_constraintTop_toTopOf="@+id/Q1Ask" />

    <TextView
        android:id="@+id/Q1Ask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/step2Q1Ask"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Q1"
        app:layout_constraintTop_toBottomOf="@+id/step2Title" />

    <RadioGroup
        android:id="@+id/Q1RadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/Q1Ask"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Q1Ask"
        app:layout_constraintTop_toBottomOf="@+id/Q1Ask">

        <RadioButton
            android:id="@+id/Q1RbYes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/RbYes" />

        <RadioButton
            android:id="@+id/Q1RbNo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbNo" />

    </RadioGroup>

    <TextView
        android:id="@+id/Q2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="-5dp"
        android:background="#FFFFFF"
        android:text="2"
        android:textAlignment="center"
        android:textColor="#E8426E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Q1"
        app:layout_constraintTop_toTopOf="@+id/Q2Ask" />

    <TextView
        android:id="@+id/Q2Ask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/step2Q2Ask"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Q2"
        app:layout_constraintTop_toBottomOf="@+id/Q1RadioGroup" />

    <RadioGroup
        android:id="@+id/Q2RadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/Q2Ask"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Q2Ask"
        app:layout_constraintTop_toBottomOf="@+id/Q2Ask">

        <RadioButton
            android:id="@+id/Q2RbYes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbYes" />

        <RadioButton
            android:id="@+id/Q2RbNo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbNo" />
    </RadioGroup>

    <TextView
        android:id="@+id/Q3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="-5dp"
        android:background="#FFFFFF"
        android:text="3"
        android:textAlignment="center"
        android:textColor="#E8426E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Q2"
        app:layout_constraintTop_toTopOf="@+id/Q3Ask" />

    <TextView
        android:id="@+id/Q3Ask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/step2Q3Ask"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Q3"
        app:layout_constraintTop_toBottomOf="@+id/Q2RadioGroup" />

    <RadioGroup
        android:id="@+id/Q3RadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/Q3Ask"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Q3Ask"
        app:layout_constraintTop_toBottomOf="@+id/Q3Ask">

        <RadioButton
            android:id="@+id/Q3RbYes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbYes" />

        <RadioButton
            android:id="@+id/Q3RbNo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbNo" />
    </RadioGroup>

    <TextView
        android:id="@+id/Q4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="-5dp"
        android:background="#FFFFFF"
        android:text="4"
        android:textAlignment="center"
        android:textColor="#E8426E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Q3"
        app:layout_constraintTop_toTopOf="@+id/Q4Ask" />

    <TextView
        android:id="@+id/Q4Ask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/step2Q4Ask"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Q4"
        app:layout_constraintTop_toBottomOf="@+id/Q3RadioGroup" />

    <RadioGroup
        android:id="@+id/Q4RadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/Q4Ask"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Q4Ask"
        app:layout_constraintTop_toBottomOf="@+id/Q4Ask">

        <RadioButton
            android:id="@+id/Q4RbYes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbYes" />

        <RadioButton
            android:id="@+id/Q4RbNo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbNo" />
    </RadioGroup>

    <TextView
        android:id="@+id/Q5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="-5dp"
        android:background="#FFFFFF"
        android:text="5"
        android:textAlignment="center"
        android:textColor="#E8426E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Q4"
        app:layout_constraintTop_toTopOf="@+id/Q5Ask" />

    <TextView
        android:id="@+id/Q5Ask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/step2Q5Ask"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Q5"
        app:layout_constraintTop_toBottomOf="@+id/Q4RadioGroup" />

    <RadioGroup
        android:id="@+id/Q5RadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/Q5Ask"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Q5Ask"
        app:layout_constraintTop_toBottomOf="@+id/Q5Ask">

        <RadioButton
            android:id="@+id/Q5RbYes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbYes" />

        <RadioButton
            android:id="@+id/Q5RbNo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbNo" />

        <RadioButton
            android:id="@+id/Q5RbIdk"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/RbIdk" />
    </RadioGroup>

    <TextView
        android:id="@+id/Q6"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="-5dp"
        android:background="#FFFFFF"
        android:text="6"
        android:textAlignment="center"
        android:textColor="#E8426E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Q5"
        app:layout_constraintTop_toTopOf="@+id/Q6Ask" />

    <TextView
        android:id="@+id/Q6Ask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/step2Q6Ask"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Q6"
        app:layout_constraintTop_toBottomOf="@+id/Q5RadioGroup" />

    <RadioGroup
        android:id="@+id/Q6RadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/Q6Ask"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Q6Ask"
        app:layout_constraintTop_toBottomOf="@+id/Q6Ask">

        <RadioButton
            android:id="@+id/Q6RbYes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbYes" />

        <RadioButton
            android:id="@+id/Q6RbNo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/RbNo" />

        <RadioButton
            android:id="@+id/Q6RbIdk"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/RbIdk" />
    </RadioGroup>

    <Button
        android:id="@+id/step2BtnPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/BtnPrevious"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q6RadioGroup" />

    <Button
        android:id="@+id/step2BtnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/BtnNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q6RadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>